--- a/admin.html
+++ b/admin.html
@@ -19,11 +19,11 @@
   --orange:#e65100;--orange-bg:rgba(230,81,0,0.08);
 }
 *,*::before,*::after{box-sizing:border-box;margin:0;padding:0;-webkit-tap-highlight-color:transparent}
-html,body{height:100%;background:var(--bg-page);font-family:'Lato',sans-serif;display:flex;flex-direction:column;align-items:center;justify-content:flex-start;min-height:100vh}
-body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellipse at 15% 15%,rgba(201,168,76,0.09) 0%,transparent 55%),radial-gradient(ellipse at 85% 85%,rgba(201,168,76,0.06) 0%,transparent 55%);pointer-events:none;z-index:0}
-.page-wrapper{position:relative;z-index:1;display:flex;flex-direction:column;width:100%;max-width:1200px;height:100vh;background:var(--bg-card);box-shadow:var(--shadow),0 0 0 1px var(--border);overflow:hidden}
-@media(min-width:768px){.page-wrapper{border-radius:0}.admin-list{display:grid;grid-template-columns:1fr 1fr;gap:6px}.admin-list .admin-row{margin-bottom:0}}
-@media(max-width:767px){.page-wrapper{border-radius:0;max-width:100vw;height:100dvh}}
+html,body{height:100%;margin:0;padding:0;background:var(--bg-page);font-family:'Lato',sans-serif;}
+body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellipse at 15% 15%,rgba(201,168,76,0.09) 0%,transparent 55%),radial-gradient(ellipse at 85% 85%,rgba(201,168,76,0.06) 0%,transparent 55%);pointer-events:none;z-index:0;display:none}
+.page-wrapper{position:fixed;inset:0;z-index:1;display:flex;flex-direction:column;background:var(--bg-card);overflow:hidden}
+@media(min-width:900px){.admin-list{display:grid;grid-template-columns:1fr 1fr 1fr;gap:6px}.admin-list .admin-row{margin-bottom:0}.section-toolbar{padding:12px 24px}.admin-list{padding:12px 24px}.stats-bar{padding:12px 24px 4px}.group-header,.section-label{padding:12px 24px 6px}}
+@media(min-width:600px) and (max-width:899px){.admin-list{display:grid;grid-template-columns:1fr 1fr;gap:6px}.admin-list .admin-row{margin-bottom:0}}
 
 /* Top bar */
 .banner{width:100%;position:relative;background:#111;flex-shrink:0}
