--- a/admin.html
+++ b/admin.html
@@ -26,14 +26,15 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
 @media(min-width:600px) and (max-width:899px){.admin-list{display:grid;grid-template-columns:1fr 1fr;gap:6px}.admin-list .admin-row{margin-bottom:0}}
 
 /* Top bar */
-.banner{width:100%;position:relative;background:#111;flex-shrink:0}
-.banner img{width:100%;height:110px;object-fit:cover;display:block}
-.banner-fallback{display:none;width:100%;height:110px;background:linear-gradient(135deg,#0d0d0d 0%,#1c1408 50%,#0d0d0d 100%);align-items:center;justify-content:center;flex-direction:column;gap:8px}
+.banner{width:100%;position:relative;background:#111;flex-shrink:0;max-height:80px;overflow:hidden}
+.banner img{width:100%;height:80px;object-fit:cover;object-position:center 30%;display:block}
+.banner-fallback{display:none;width:100%;height:80px;background:linear-gradient(135deg,#0d0d0d 0%,#1c1408 50%,#0d0d0d 100%);align-items:center;justify-content:center;flex-direction:row;gap:12px}
+@media(min-width:900px){.banner{max-height:64px}.banner img{height:64px}.banner-fallback{height:64px}}
 .banner-fallback.show{display:flex}
-.banner-title{font-family:'Cinzel',serif;color:#C9A84C;font-size:26px;font-weight:700;letter-spacing:10px}
-.banner-sub{color:rgba(201,168,76,0.6);font-size:10px;letter-spacing:4px;text-transform:uppercase}
-.banner-overlay{position:absolute;bottom:0;left:0;right:0;height:55px;background:linear-gradient(to top,rgba(255,255,255,0.97),transparent)}
-.banner-nav{position:absolute;bottom:10px;left:0;right:0;display:flex;align-items:center;justify-content:space-between;padding:0 16px}
+.banner-title{font-family:'Cinzel',serif;color:#C9A84C;font-size:20px;font-weight:700;letter-spacing:8px}
+.banner-sub{color:rgba(201,168,76,0.6);font-size:9px;letter-spacing:3px;text-transform:uppercase}
+.banner-overlay{position:absolute;bottom:0;left:0;right:0;height:40px;background:linear-gradient(to top,rgba(255,255,255,0.97),transparent)}
+.banner-nav{position:absolute;bottom:6px;left:0;right:0;display:flex;align-items:center;justify-content:space-between;padding:0 16px}
 .back-btn{display:flex;align-items:center;gap:6px;background:rgba(255,255,255,0.92);border:1px solid var(--border);border-radius:20px;padding:5px 14px;font-family:'Cinzel',serif;font-size:10px;letter-spacing:1.5px;color:var(--gold-dark);text-decoration:none;backdrop-filter:blur(8px)}
 .page-badge{font-family:'Cinzel',serif;font-size:10px;letter-spacing:2px;color:var(--gold);text-transform:uppercase;background:rgba(255,255,255,0.92);border:1px solid var(--border);border-radius:20px;padding:5px 14px;backdrop-filter:blur(8px)}
 .gold-line{height:2px;background:linear-gradient(90deg,transparent,var(--gold-light),transparent);flex-shrink:0;opacity:0.5}
