--- a/admin.html
+++ b/admin.html
@@ -33,8 +33,8 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
 .banner-fallback.show{display:flex}
 .banner-title{font-family:'Cinzel',serif;color:#C9A84C;font-size:20px;font-weight:700;letter-spacing:8px}
 .banner-sub{color:rgba(201,168,76,0.6);font-size:9px;letter-spacing:3px;text-transform:uppercase}
-.banner-overlay{position:absolute;bottom:0;left:0;right:0;height:40px;background:linear-gradient(to top,rgba(255,255,255,0.97),transparent)}
-.banner-nav{position:absolute;bottom:6px;left:0;right:0;display:flex;align-items:center;justify-content:space-between;padding:0 16px}
+.banner-overlay{display:none}
+.banner-nav{display:none}
 .back-btn{display:flex;align-items:center;gap:6px;background:rgba(255,255,255,0.92);border:1px solid var(--border);border-radius:20px;padding:5px 14px;font-family:'Cinzel',serif;font-size:10px;letter-spacing:1.5px;color:var(--gold-dark);text-decoration:none;backdrop-filter:blur(8px)}
 .page-badge{font-family:'Cinzel',serif;font-size:10px;letter-spacing:2px;color:var(--gold);text-transform:uppercase;background:rgba(255,255,255,0.92);border:1px solid var(--border);border-radius:20px;padding:5px 14px;backdrop-filter:blur(8px)}
 .gold-line{height:2px;background:linear-gradient(90deg,transparent,var(--gold-light),transparent);flex-shrink:0;opacity:0.5}
