--- a/admin.html
+++ b/admin.html
@@ -921,23 +921,32 @@ function camposPastores() { return [
 ];}
 
 function camposLinks() { return [
+  {type:'section',      label:'Identificacao'},
   {key:'nome',          label:'Nome',           ph:'Ex: LINK Montijo',       full:true},
   {key:'tipo',          label:'Tipo',           type:'select', options:[
     {v:'Familias',l:'Familias'},{v:'FLOW',l:'FLOW'},{v:'VOX',l:'VOX'},{v:'Diamantes',l:'Diamantes'},{v:'EKLECTOS',l:'EKLECTOS'}
   ]},
   {key:'faixa_etaria',  label:'Faixa Etaria',   ph:'Ex: 18-35 anos'},
+  {key:'capacidade',    label:'Capacidade',     type:'number', ph:'Ex: 20'},
+  {type:'section',      label:'Lideranca'},
   {key:'responsavel',   label:'Responsavel',    ph:'Nome do lider',          full:true},
   {key:'co_responsavel',label:'Co-Responsavel', ph:'Nome do co-lider',       full:true},
+  {key:'anfitrioes',    label:'Anfitrioes',     ph:'Nomes dos anfitrioes',   full:true},
+  {type:'section',      label:'Horario'},
   {key:'dia',           label:'Dia',            type:'select', options:[
     {v:'Segunda-feira',l:'Segunda-feira'},{v:'Terca-feira',l:'Terca-feira'},
     {v:'Quarta-feira',l:'Quarta-feira'},{v:'Quinta-feira',l:'Quinta-feira'},
     {v:'Sexta-feira',l:'Sexta-feira'},{v:'Sabado',l:'Sabado'},{v:'Domingo',l:'Domingo'}
   ]},
   {key:'horario',       label:'Horario',        ph:'Ex: 20h00'},
-  {key:'zona',          label:'Zona',           ph:'Ex: Montijo'},
-  {key:'morada',        label:'Morada',         ph:'Rua...',                 full:true},
-  {key:'contato',       label:'Contato (WhatsApp)', ph:'+351 9XX XXX XXX',  full:true},
   {key:'online',        label:'E Online',       type:'checkbox'},
+  {type:'section',      label:'Localizacao'},
+  {key:'zona',          label:'Zona',           ph:'Ex: Montijo'},
+  {key:'distrito',      label:'Distrito',       ph:'Ex: Setubal'},
+  {key:'morada',        label:'Morada',         ph:'Rua...',                 full:true},
+  {key:'codigo_postal', label:'Cod. Postal',    ph:'Ex: 2870-001'},
+  {type:'section',      label:'Contacto'},
+  {key:'contato',       label:'Contato (WhatsApp)', ph:'+351 9XX XXX XXX',  full:true},
   {key:'ativo',         label:'Ativo',          type:'checkbox', default:true},
 ];}
 
