--- a/admin.html
+++ b/admin.html
@@ -951,6 +951,29 @@ function setImgStatus(key, msg, tipo) {
   el.className = 'img-upload-status' + (tipo?' '+tipo:'');
 }
 
+// Redimensiona imagem antes do upload (max 800px, qualidade 0.82, sempre JPEG)
+function resizeImage(file, maxW=800, maxH=800, quality=0.82) {
+  return new Promise((resolve) => {
+    const img = new Image();
+    const url = URL.createObjectURL(file);
+    img.onload = () => {
+      let {width:w, height:h} = img;
+      if (w > maxW || h > maxH) {
+        const ratio = Math.min(maxW/w, maxH/h);
+        w = Math.round(w*ratio);
+        h = Math.round(h*ratio);
+      }
+      const canvas = document.createElement('canvas');
+      canvas.width=w; canvas.height=h;
+      canvas.getContext('2d').drawImage(img,0,0,w,h);
+      URL.revokeObjectURL(url);
+      canvas.toBlob(blob => resolve(blob), 'image/jpeg', quality);
+    };
+    img.onerror = () => { URL.revokeObjectURL(url); resolve(file); };
+    img.src = url;
+  });
+}
+
 async function handleFileSelect(key, bucket, input) {
   const file = input.files?.[0];
   if (!file) return;
@@ -958,35 +981,39 @@ async function handleFileSelect(key, bucket, input) {
   // Preview local imediato
   const localUrl = URL.createObjectURL(file);
   updateImagePreview(key, localUrl);
-  setImgStatus(key, 'A fazer upload...', '');
+  setImgStatus(key, 'A comprimir imagem...', '');
 
-  // Progress bar
   const prog = document.getElementById('img-prog-'+key);
   const bar  = document.getElementById('img-prog-bar-'+key);
   if (prog) prog.classList.add('active');
-  if (bar) bar.style.width = '30%';
+  if (bar) bar.style.width = '20%';
 
   try {
-    const ext      = file.name.split('.').pop();
-    const filename = `${Date.now()}-${Math.random().toString(36).slice(2)}.${ext}`;
+    // Redimensiona e comprime para JPEG max 800px
+    const blob     = await resizeImage(file);
+    const filename = `${Date.now()}-${Math.random().toString(36).slice(2)}.jpg`;
     const path     = `${secaoAtiva}/${filename}`;
 
-    if (bar) bar.style.width = '60%';
+    setImgStatus(key, 'A fazer upload...', '');
+    if (bar) bar.style.width = '50%';
+
+    // Usa o token do utilizador autenticado (nao a anon key)
+    const token = currentUser?.token || SUPA_KEY;
 
     const res = await fetch(`${SUPA_URL}/storage/v1/object/${bucket}/${path}`, {
       method: 'POST',
       headers: {
-        'apikey': SUPA_KEY,
-        'Authorization': `Bearer ${SUPA_KEY}`,
-        'Content-Type': file.type,
-        'x-upsert': 'true',
+        'apikey':        SUPA_KEY,
+        'Authorization': `Bearer ${token}`,
+        'Content-Type':  'image/jpeg',
+        'x-upsert':      'true',
       },
-      body: file,
+      body: blob,
     });
 
     if (!res.ok) {
       const err = await res.json().catch(()=>({}));
-      throw new Error(err?.message || 'Erro no upload');
+      throw new Error(err?.message || err?.error || 'Erro no upload');
     }
 
     if (bar) bar.style.width = '100%';
@@ -995,13 +1022,14 @@ async function handleFileSelect(key, bucket, input) {
     document.getElementById('f_'+key).value = publicUrl;
     document.getElementById('img-url-input-'+key).value = publicUrl;
     updateImagePreview(key, publicUrl);
-    setImgStatus(key, 'Upload concluido!', 'ok');
+
+    const kb = Math.round(blob.size/1024);
+    setImgStatus(key, `Upload concluido! (${kb} KB)`, 'ok');
 
   } catch(e) {
     setImgStatus(key, 'Erro: '+e.message, 'err');
-    // Mantem preview local mesmo com erro
   } finally {
-    setTimeout(()=>{ if(prog) prog.classList.remove('active'); if(bar) bar.style.width='0%'; }, 1500);
+    setTimeout(()=>{ if(prog) prog.classList.remove('active'); if(bar) bar.style.width='0%'; }, 2000);
     input.value = '';
   }
 }
